mask scm version of mutagen

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -6,3 +6,6 @@
 # Live git exheres
 media-sound/ncmpcpp[~scm]
 
+# Anders Ossowicki <arkanoid@exherbo.org> (3 Jun 2009)
+# Mask scm version
+dev-python/mutagen[~scm]
