--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -9,3 +9,8 @@ media-sound/ncmpcpp[~scm]
 # Anders Ossowicki <arkanoid@exherbo.org> (3 Jun 2009)
 # Mask scm version
 dev-python/mutagen[~scm]
+
+# Marvin Schmidt <marvin_schmidt@gmx.net> (14 Sep 2009)
+# Breaks ABI/API
+media-libs/libass[>=0.9.7]
+
