Initial blender exheres

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -14,3 +14,7 @@ dev-python/mutagen[~scm]
 # Breaks ABI/API
 media-libs/libass[>=0.9.7]
 
+# Michael Forney <michael@obberon.com> (18 Sep 2009)
+# Mask scm version
+media-gfx/blender[~scm]
+
