Change my email

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -10,7 +10,7 @@ media-sound/ncmpcpp[~scm]
 # Mask scm version
 dev-python/mutagen[~scm]
 
-# Marvin Schmidt <marvin_schmidt@gmx.net> (14 Sep 2009)
+# Marvin Schmidt <marv@exherbo.org> (14 Sep 2009)
 # Breaks ABI/API
 media-libs/libass[>=0.9.7]
 
