Add mpdhooker-0.2, mask mpdhooker-scm

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -22,3 +22,7 @@ media-gfx/blender[~scm]
 # Mask scm version
 media-libs/libmpdclient[~scm]
 
+# Ali Polatel <alip@exherbo.org> (18 Dec 2009)
+# Mask scm version
+media-sound/mpdhooker[~scm]
+
