--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -24,5 +24,5 @@ media-libs/libmpdclient[~scm]
 
 # Ali Polatel <alip@exherbo.org> (18 Dec 2009)
 # Mask scm version
-media-sound/mpdhooker[~scm]
+media-sound/mpdcron[~scm]
 
