--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -2,6 +2,10 @@
 # explanation of why it is getting masked. Add new entries at the top
 # of this file.
 
+# Yury Kudryashov <urkud@ya.ru> (15 Feb 2010)
+# Mask scm version
+media-libs/libcaca[~scm]
+
 # Ali Polatel <polatel@gmail.com> (12 May 2009)
 # Live git exheres
 media-sound/ncmpcpp[~scm]
