mask media-sound/cmus[~scm]

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -2,6 +2,10 @@
 # explanation of why it is getting masked. Add new entries at the top
 # of this file.
 
+# Jonathan Dahan <jedahan@gmail.com> (22 Mar 2010)
+# Mask scm version
+media-sound/cmus[~scm]
+
 # Yury Kudryashov <urkud@ya.ru> (15 Feb 2010)
 # Mask scm version
 media-libs/libcaca[~scm]
