Mask media-libs/portaudio[~scm]

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -36,3 +36,7 @@ media-libs/libmpdclient[~scm]
 # Mask scm version
 media-sound/mpdcron[~scm]
 
+# Ingmar Vanhassel <ingmar@exherbo.org> (16 Aug 2010)
+# Mask scm version
+media-libs/portaudio[~scm]
+
