gmpc: Add scm (masked)

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -69,3 +69,10 @@ media-libs/glyr[~scm] [[
     description = [ Mask -scm version ]
 ]]
 
+media-sound/gmpc[~scm] [[
+    author = [ Quention "Sardem FF7" Glidic <sardemff7+exherbo@sardemff7.net> ]
+    date = [ 04 Dec 2011 ]
+    token = scm
+    description = [ Mask -scm version ]
+]]
+
