libmpd: Mask scm version

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -55,3 +55,10 @@ media-libs/portaudio[~scm] [[
     description = [ Mask -scm version ]
 ]]
 
+media-libs/libmpd[~scm] [[
+    author = [ Quention "Sardem FF7" Glidic <sardemff7+exherbo@sardemff7.net> ]
+    date = [ 04 Dec 2011 ]
+    token = scm
+    description = [ Mask -scm version ]
+]]
+
