glyr: Add initial exheres (scm, masked)

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -62,3 +62,10 @@ media-libs/libmpd[~scm] [[
     description = [ Mask -scm version ]
 ]]
 
+media-libs/glyr[~scm] [[
+    author = [ Quention "Sardem FF7" Glidic <sardemff7+exherbo@sardemff7.net> ]
+    date = [ 04 Dec 2011 ]
+    token = scm
+    description = [ Mask -scm version ]
+]]
+
