--- a/packages/net-misc/mediatomb/files/systemd/mediatomb.service
+++ b/packages/net-misc/mediatomb/files/systemd/mediatomb.service
@@ -8,7 +8,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/mediatomb -c /etc/mediatomb/config.xml -u mediatomb -g mediatomb -P /var/run/mediatomb.pid -l /var/log/mediatomb.log -m /var/lib -f mediatomb
+ExecStart=/usr/bin/mediatomb -c /etc/mediatomb/config.xml -u mediatomb -g mediatomb -P /run/mediatomb.pid -l /var/log/mediatomb.log -m /var/lib -f mediatomb
 
 [Install]
 WantedBy=multi-user.target
