mixxx: version bump, add scm, exlibify

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -76,3 +76,12 @@ media-sound/gmpc[~scm] [[
     description = [ Mask -scm version ]
 ]]
 
+(
+  media-sound/mixxx[~scm]
+  media-sound/mixxx[~1.11-scm]
+) [[
+    *author = [ Ali Polatel <alip@exherbo.org> ]
+    *date = [ 28 Jan 2013 ]
+    *token = scm
+    *description = [ Mask -scm versions ]
+]]
