ladish: fix external refs.

--- a/metadata/repository_mask.conf
+++ b/metadata/repository_mask.conf
@@ -85,3 +85,10 @@ media-sound/gmpc[~scm] [[
     *token = scm
     *description = [ Mask -scm versions ]
 ]]
+
+media-sound/ladish[~scm] [[
+    author = [ Goran Mekić <meka@lugons.org> ]
+    date = [ 23 Feb 2013 ]
+    token = scm
+    description = [ Mask -scm version ]
+]]
