--- a/metadata/about.conf
+++ b/metadata/about.conf
@@ -1,4 +1,4 @@
-homepage = http://github.com/alip/media-unofficial/tree/master/
-summary = Miscellaneous unofficial media packages for the Exherbo Linux distribution
+homepage = https://github.com/Exherbo/media-unofficial
+summary = This repository was moved to https://github.com/Exherbo/media-unofficial
 owner = Ali Polatel <polatel@gmail.com>
 status = third-party
